# jellytauri

./: .gitmodules  README.md  index.html  latest.json  package.json  tsconfig.json  tsup.config.ts  unocss.config.ts  vite.config.ts
.github/: renovate.json
.github/workflows/: continuous-delivery.yml  continuous-integration.yml
src/: app.ts  preload.js  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
