[package]
name = "jellytauri"
version = "1.0.1"
description = "A Tauri App"
authors = ["DanCodes <dan@dancodes.online"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.4", features = [] }
tauri-plugin-store = "2.0.0-beta.6"
tauri-plugin-process = "2.0.0-beta.4"
tauri-plugin-updater = "2.0.0-beta.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
